# raytracer_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  notes.txt
.github/workflows/: build.yml
App/: Makefile
App/Source/: main.cpp
Binaries/Intermediates/macosx-x86_64/Debug/App/: main.d
Binaries/Intermediates/macosx-x86_64/Debug/Core/: directional_light.d  framebuffer.d  phong.d  photon.d  point_light.d  polymesh.d  scene.d  sphere.d
Binaries/macosx-x86_64/Debug/App/: App
Core/: Makefile
Core/Source/Core/core/: colour.h  framebuffer.cpp  photon.cpp  photon.h  ray.h  scene.cpp  scene.h
Core/Source/Core/geometry/: hit.h  object.h  polymesh.cpp  polymesh.h  sphere.cpp  sphere.h
Core/Source/Core/geometry/lights/: light.h  (+3 more)
Core/Source/Core/materials/: glass.h  material.h  metal.h  phong.cpp  phong.h
Core/Source/Core/meshes/: cube.ply  wall1.ply
Core/Source/Core/utils/: kdtree.h  vector.h  vertex.h
Scripts/: Setup-Linux.sh  Setup-Mac.sh
new/App/: Makefile
new/App/Source/: main.cpp
new/Core/: Makefile
old/: README.md
old/src/core/: photon.cpp  ray.h  scene.cpp
old/src/geometry/: object.h  sphere.cpp
old/src/lights/: light.h
old/src/meshes/: square.ply  wall2.ply
src/: hit.h  light.h  main.cpp  material.h  phong.cpp  phong.h  photon.cpp  photon.h  point_light.cpp  point_light.h  polymesh.cpp  scene.cpp  scene.h  sphere.cpp  test.ppm  vector.h  wall3.ply  wall4.ply
src/core/: scene.cpp  scene.h
src/geometry/: sphere.h
src/lights/: directional_light.h  point_light.cpp
src/materials/: material.h
src/utils/: vector.h  vertex.h
(+7 files in other folders)
